--- a/styles.css
+++ b/styles.css
@@ -2377,26 +2377,11 @@ div.card-body > p > i{
 .em-circle-state {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
     text-transform: uppercase;
-    position: absolute;
-    font-size: 0.75rem;
-    top: -18px;
-    right: 10px;
-    border-radius: 50px;
-    padding: 6px 12px;
-    background-color: grey;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.em-circle-state {
-    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
-    text-transform: uppercase;
     padding: 6px 12px;
     border-radius: 15px 15px 0 0;
     position: absolute;
     top: -32px;
+    font-weight: bolder;
     width: fit-content;
     right: 20px;
     font-size: 0.75rem;
