--- a/styles.css
+++ b/styles.css
@@ -2374,6 +2374,20 @@ div.card-body > p > i{
     margin-right: 3px;
 }
 
+.ios-style-paqId{
+    height: 40px;
+    padding-top: 5px;
+    position: relative;
+    background-color: orangered;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
+    margin-bottom: -15px;
+    border-radius: 12px 12px 0 0;
+    color: white;
+    font-size: 12px;
+    font-weight: 600;
+    z-index: 1;
+}
+
 .em-circle-state {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
     text-transform: uppercase;
@@ -4144,8 +4158,23 @@ div .form-check {
     border-radius: 12px 12px 0 0;
     text-align: center;
     border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.4); 
     transition: background-color 0.3s ease;
+    z-index: 1000;
+}
+
+.ios-style-id-2 {
+    font-size: 12px;
+    font-weight: 600;
+    color: #ffffff;
+    background-color: #1e90ff;
+    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.4); 
+    border-radius: 5px 5px 0 0;
+    padding: 5px 18px;
+    text-align: center;
+    border: none;
+    transition: background-color 0.3s ease;
+    z-index: 1000;
 }
 
 .ios-style-id:hover {
@@ -4153,6 +4182,8 @@ div .form-check {
 }
 
 .ios-style-id-container > select{
+    border: 1px solid 1e90ff;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4); 
     margin-bottom: 0 !important;
     border-radius: 0 0 10px 10px !important;
 }
@@ -5779,3 +5810,35 @@ img.gray-filter {
 .counter.changed {
     background-color: #2196f3; /* Azul */
 }
+
+/* ALERTAS FACTURACION MELI */
+.alert-ios-meli {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #f8f9fa;
+    color: #212529;
+    border: 1px solid #ced4da;
+    border-radius: 10px;
+    padding: 10px 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    z-index: 1050;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 14px;
+}
+
+.alert-ios-meli i {
+    margin-right: 10px;
+}
+
+.alert-ios-meli .close-btn {
+    background: none;
+    border: none;
+    color: #212529;
+    font-size: 16px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+/* ALERTAS FACTURACION MELI */
