--- a/styles.css
+++ b/styles.css
@@ -4125,19 +4125,20 @@ td.product-cell:hover::after {
     background-color: #0056b3;
   }
   
-  /* NOTIFICACION DE NUEVAS VENTAS */
   .notification {
-    border: dashed cornflowerblue 2px;
-    bottom: 50px;
+    border: 1px solid cornflowerblue;
+    bottom: 60px;
     position: fixed;
-    background-color: #f7f7fc;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.314);
-    padding: 20px;
-    margin: 20px;
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 15px;
+    margin: 15px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     color: #333;
-    transition: all 0.3s ease;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    opacity: 0.9;
+    z-index: 1000;
 }
 
 .notification .d-flex {
@@ -4146,16 +4147,21 @@ td.product-cell:hover::after {
     align-items: center;
 }
 
+#notificationMessage{
+    padding-right:30px;
+}
+
 .notification .close {
     background: none;
+    padding: 5px;
     border: none;
     font-size: 1.5rem;
-    color: #ff3b30;
+    color: orangered;
     cursor: pointer;
     transition: color 0.2s ease;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 5px;
+    right: 5px;
 }
 
 .notification .close:hover {
