--- a/styles.css
+++ b/styles.css
@@ -5901,6 +5901,8 @@ img.gray-filter {
     justify-content: center;
     align-items: center;
     margin: 20px 0;
+    overflow-x: auto; 
+    white-space: nowrap;
 }
 
 .pagination-button {
