--- a/styles.css
+++ b/styles.css
@@ -4057,6 +4057,39 @@ td.product-cell:hover::after {
     z-index: 1;
 }
 
+/* Nuevo estilo iOS para la columna Valor */
+.value-cell {
+    padding: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    color: #444; 
+    color: green !important;
+    text-align: left;
+    font-weight: bolder !important; 
+    line-height: 1.6;
+    transition: background-color 0.3s ease, transform 0.2s ease; 
+}
+
+td.value-cell:hover{
+    background-color: cornflowerblue;
+    color: white !important;
+}
+
+td.value-cell:hover::after {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+    content: "Ver Detalles 💵";
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white !important;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    white-space: nowrap;
+    z-index: 1;
+}
+
 /* MODAL COMENTARIOS EN FACTURACION */
 .input-group .form-control {
     border-radius: 10px;
