--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
 
 *{
     font-family: "Roboto", sans-serif;
-    font-weight: 500;
     font-style: normal;
 }
 
@@ -2387,6 +2386,31 @@ div.card-body > p > i{
     font-size: 12px;
     font-weight: 600;
     z-index: 1;
+}
+
+.ios-style-cliente{
+    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 40px;
+    padding-top: 2px;
+    padding-bottom: 10px;
+    position: relative;
+    background-color: indigo;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
+    margin-bottom: -15px;
+    border-radius: 12px 12px 0 0;
+    color: white;
+    font-size: 12px;
+    font-weight: 600;
+    z-index: 1;
+}
+
+.ios-style-cliente img{
+    width: 18px;
+    margin-right: 5px;
 }
 
 .em-circle-state {
