--- a/styles.css
+++ b/styles.css
@@ -6111,48 +6111,70 @@ img.gray-filter {
     font-weight: 600;
 }
 
+/* WIFI */
 .notification-ios-wifi {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    max-width: 300PX;
+    display: none;
     position: fixed;
     bottom: 20px;
-    right: 20px;
-    display: none;
-    background-color: #ffffff;
-    color: #333;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid orange;
+    left: 20px;
+    background-color: orangered;
+    color: white;
+    padding: 15px 20px;
+    border-radius: 12px;
+    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.6);
+    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
     align-items: center;
-    justify-content: space-between;
-    width: 300px;
     z-index: 1000;
-    transition: all 0.3s ease;
-    font-size: 16px;
+    animation: fadeIn 0.5s;
+}
+
+.notification-ios-wifi.blink {
+    animation: fadeIn 2s, colorChange 2s infinite alternate;
+}
+
+@keyframes colorChange {
+    from { background-color: orangered; }
+    to { background-color: lightcoral; }
 }
 
 .wifi-icon-ios-wifi {
-    width: 30px;
-    height: 30px;
+    width: 120px;
     margin-right: 10px;
 }
 
 .close-btn-ios-wifi {
+    position: absolute;
+    top: 10px;
+    right: 10px;
     cursor: pointer;
-    margin-left: 10px;
-    font-weight: bold;
-    color: #ff4d4d;
+    font-size: 18px;
 }
 
 .retry-button-ios-wifi {
-    background-color: #007aff;
-    color: white;
+    background-color: white;
+    color: rgba(255, 0, 0, 0.8);
     border: none;
-    border-radius: 5px;
-    padding: 8px 12px;
+    border-radius: 8px;
+    padding: 5px 10px;
+    margin-left: 10px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .retry-button-ios-wifi:hover {
-    background-color: #005bb5;
+    background-color: rgba(255, 0, 0, 0.8);
+    color: white;
 }
+
+.LogiPaq-wifi{
+    font-family: "Titan One", sans-serif;
+    font-size: 1.5rem;
+    color: yellow;
+}
+/* FIN WIFI */
