--- a/styles.css
+++ b/styles.css
@@ -6281,3 +6281,33 @@ img.gray-filter {
     color: #155724; 
     margin-top: -8px;
 }
+
+#camera-preview {
+    position: relative;
+    width: 100%;
+    height: 400px; 
+    overflow: hidden;
+    display: none; 
+}
+
+#camera-preview video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+.focus-area-camera {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80%; 
+    height: 20%; 
+    border: 2px dashed #00ff00; 
+    transform: translate(-50%, -50%); 
+    pointer-events: none; 
+    display: block;
+}
+
+.modal-content {
+    background-color: rgba(255, 255, 255, 0.9);
+}
