--- a/styles.css
+++ b/styles.css
@@ -731,6 +731,21 @@ button:hover {
     z-index: -100;
 }
 
+.cliente2 {
+    width: fit-content;
+    text-align: center;
+    padding: 8px;
+    margin-bottom: -5px;
+    color: indigo;
+    font-weight: 500;
+    border-radius: 12px 12px 0 0;
+    border: 1px solid #ccc;
+    background-color: rgb(231, 220, 255); 
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; /* Fuente de macOS */
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; 
+    z-index: -100;
+}
+
 .cliente > img{
     margin-right: 5px;
 }
