--- a/styles.css
+++ b/styles.css
@@ -4771,7 +4771,7 @@ input[disabled] {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); 
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
     color: white; 
-    padding: 20px; 
+    padding: 5px 10px 5px 10px; 
     border-radius: 12px; 
     text-align: center; 
     font-size: 24px; 
