--- a/styles.css
+++ b/styles.css
@@ -746,6 +746,29 @@ button:hover {
     z-index: -100;
 }
 
+.cliente3 {
+    width: fit-content;
+    text-align: center;
+    padding: 8px 10px 15px 8px;
+    margin-bottom: -10px;
+    color: indigo;
+    font-weight: 500;
+    border-radius: 12px 12px 0 0;
+    border: 1px solid #ccc;
+    background-color: rgb(231, 220, 255); 
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; /* Fuente de macOS */
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; 
+    z-index: -100;
+}
+
+.apiSeguimiento .card-text:first-child{
+    background-color: rgb(231, 239, 255);
+    color: #007bff;
+    font-weight: 600;
+    padding: 10px;
+    border-radius: 10px;
+}
+
 .cliente > img{
     margin-right: 5px;
 }
@@ -755,6 +778,10 @@ button:hover {
 }
 
 .cliente2 > img{
+    width: 30px;
+}
+
+.cliente3 > img{
     width: 30px;
 }
 
@@ -2307,7 +2334,7 @@ div.card-body > p > i{
 
 #img-meli{
     overflow: visible;
-    width: 35px;
+    width: 30px;
     padding-left: 5px;
 }
 
@@ -2766,16 +2793,16 @@ div.card-body > p > i{
 .em-circle-state-cliente{
     font-family: "Reddit Sans Condensed", sans-serif;
     font-size: 1rem;
+    width: fit-content;
     height: 30px;
     padding-inline: 5px;
-    padding: 5px;
-    border-radius: 5px;
-    position: absolute;
+    margin-top: -20px;
+    border-radius: 0 0 12px 12px;
+    margin-bottom: 5px;
     top: -15px; 
-    left: 10px;
-    color: #9e28b5;
-    border: 1px solid #9e28b5;
-    background-color: white;
+    color: indigo;
+    border-bottom: 2px solid indigo;
+    background-color: rgb(231, 220, 255); 
     display: flex; 
     align-items: center; 
     justify-content: center;
@@ -2821,12 +2848,12 @@ div.card-body > p > i{
     font-family: "Reddit Sans Condensed", sans-serif;
     font-size: 1rem;
     padding-inline: 5px;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 5px 10px 1px 10px;
+    border-radius: 12px 12px 0 0;
     position: absolute;
-    top: -18px; 
-    right: 10px;
-    background-color: cornflowerblue; 
+    top: -30px; 
+    right: 12px;
+    background-color: grey; 
     color: white;
     display: flex; 
     align-items: center; 
@@ -2839,11 +2866,11 @@ div.card-body > p > i{
     font-size: 1rem;
     height: 30px !important;
     padding-inline: 5px;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 5px 10px 5px 10px;
+    border-radius: 12px 12px 0 0;
     position: absolute;
-    top: -18px; 
-    right: 10px;
+    top: -30px; 
+    right: 12px;
     background-color:crimson; 
     color: white;
     display: flex; 
@@ -2856,11 +2883,11 @@ div.card-body > p > i{
     font-family: "Reddit Sans Condensed", sans-serif;
     font-size: 1rem;
     padding-inline: 5px;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 5px 10px 1px 10px;
+    border-radius: 12px 12px 0 0;
     position: absolute;
-    top: -18px; 
-    right: 10px;
+    top: -30px; 
+    right: 12px;
     background-color: #007aff;
     color: whitesmoke;
     display: flex; 
@@ -2874,7 +2901,7 @@ div.card-body > p > i{
     font-size: 1rem;
     height: 30px;
     padding-inline: 5px;
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
     border-radius: 0 15px 0 15px;
     position: absolute;
     top: 0px; 
@@ -2907,13 +2934,13 @@ div.card-body > p > i{
 .em-state-bna2{
     font-family: "Reddit Sans Condensed", sans-serif;
     font-size: 1rem;
-    height: 30px;
+    height: 30px !important;
     padding-inline: 5px;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 5px 10px 5px 10px;
+    border-radius: 12px 12px 0 0;
     position: absolute;
-    top: -15px; 
-    right: 10px;
+    top: -30px; 
+    right: 20px;
     color: white;
     background-color: rgb(68, 46, 84);
     display: flex; 
@@ -2921,6 +2948,10 @@ div.card-body > p > i{
     justify-content: center;
     font-weight: bold; 
     overflow: hidden;
+}
+
+.em-state-bna2 img{
+    width: 50px !important;
 }
 
 .dimensions-info {
