--- a/styles.css
+++ b/styles.css
@@ -2950,6 +2950,20 @@ div.card-body > p > i{
     overflow: hidden;
 }
 
+.strong-slack{
+    color: rgb(61, 61, 61);
+    background-color: rgba(255, 255, 255, 0.664);
+}
+
+.strong-slack-header{
+    background-color: rgb(0, 122, 255);
+    color: white;
+}
+
+.toast-container {
+    bottom: 80px !important;
+}
+
 .em-state-bna2 img{
     width: 50px !important;
 }
@@ -6364,4 +6378,57 @@ img.gray-filter {
 
 .modal-content {
     background-color: rgba(255, 255, 255, 0.9);
+}
+
+.slack-error-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    background-color: #f5c2c7;
+    padding: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+    border-inline-end: 1px solid #ccc;
+    border-inline-start: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+    border-bottom: none;
+}
+
+.slack-error-header {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    color: #721c24;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.slack-error-header2 {
+    font-size: medium;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    color: #2f610b;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.slack-error-logo {
+    width: 30px;
+    margin-right: 8px;
+}
+
+.slack-error-message {
+    color: #dc3545;
+    text-align: center;
+    font-size: 14px;
+}
+
+.slack-error-message2 {
+    color: green;
+    text-align: center;
+    font-size: 14px;
 }
