--- a/styles.css
+++ b/styles.css
@@ -4712,7 +4712,7 @@ td.imagen-Meli img {
 
 .card-facturacion-meli {
     border: 1px solid #d0d0d0;
-    border-radius: 12px;
+    border-radius: 12px 12px 5px 5px !important;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     background-color: #ffffff; /* Fondo blanco para un look limpio */
 }
