--- a/styles.css
+++ b/styles.css
@@ -6505,5 +6505,11 @@ img.gray-filter {
 }
 
 .spinner-gif-colecta {
-    width: 80px !important;
-}	
+    width: 200px !important;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
