--- a/styles.css
+++ b/styles.css
@@ -6518,12 +6518,18 @@ img.gray-filter {
     font-size: 24px;
 }
 
+.spinner-container-colecta {
+    position: relative;
+    text-align: center;
+}
+
 .spinner-gif-colecta {
-    width: 200px !important;
-    animation: spin 1s linear infinite;
+    width: 100px !important;
+    animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
     0% { transform: translate(-50%, -50%) rotate(0deg); }
     100% { transform: translate(-50%, -50%) rotate(360deg); }
 }
+
