--- a/styles.css
+++ b/styles.css
@@ -6494,6 +6494,7 @@ img.gray-filter {
 
 #camera-preview::after {
     content: "Escanea Codigo de Barras";
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
