--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,15 @@
     background-color: #0065C3;
   }
 
-body {
+  body {
     min-height: 100vh;
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background: rgb(52,152,219);
-    background: linear-gradient(145deg, rgba(255, 102, 102, 1) 20%, rgba(139, 0, 0, 1) 80%, rgba(255, 85, 85, 1) 100%);
+    background-image: url('./Img/inspiration-geometry.png'), linear-gradient(180deg, #1e3a8a, #1e40af, #3b82f6, #60a5fa);
+    background-repeat: repeat, no-repeat;
+    background-size: auto, cover;
+    background-position: top left, center;
 }
 
 h1 {
