--- a/styles.css
+++ b/styles.css
@@ -2439,7 +2439,7 @@ div.card-body > p > i{
     padding: 5px;
     border-radius: 0 0 5px 5px;
     margin-top: -10px;
-    background-color: orange; 
+    background-color: crimson; 
     color: white;
     display: flex;
     align-items: center;
