--- a/styles.css
+++ b/styles.css
@@ -3599,7 +3599,7 @@ div .form-check {
     font-size: small;
     background-color: crimson;
     color: white; 
-    padding: 8px 5px 15px 5px;
+    padding: 2px 5px 15px 5px;
     border-top: 3px solid rgb(138, 0, 28); 
     border-radius: 10px 10px 0 0; 
     margin: 8px 0;
@@ -3612,7 +3612,24 @@ div .form-check {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150); 
 }
 
-.card-text-isSkuIncluded > i{
+.card-text-isSkuIncludedPlaceIt {
+    text-align: center;
+    font-size: x-small;
+    background-color: #4CAF50; 
+    color: #FFFFFF; 
+    padding: 2px 5px 15px 5px;
+    border-top: 4px solid yellow;
+    border-radius: 10px 10px 0 0; 
+    margin: 8px 0;
+    margin-bottom: -10px;
+    text-transform: uppercase;
+    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    margin-top: 0;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
+}
+
+.card-text-isSkuIncluded > i, .card-text-isSkuIncludedPlaceIt > i{
     font-size: 1.2rem;
     color: yellow;
 }
@@ -5121,7 +5138,7 @@ input[disabled] {
     margin-right: 0;
     height: 48px !important; 
 }
-#addSkuButton {
+#addSkuButton, #addSkuButtonPlaceIt {
     border-radius: 0px 10px 10px 0px !important;
     height: 48px !important; 
 }
