--- a/styles.css
+++ b/styles.css
@@ -4204,6 +4204,26 @@ div .form-check {
     font-size: 16px; 
 }
 
+.macos-style2 {
+    text-align: center;
+    background-color: white; 
+    border-radius: 0 0 5px 5px;
+    padding: 10px 5px 5px; 
+    border: cornflowerblue solid 1px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    color: cornflowerblue;
+    font-weight: 400;
+    margin-top: -15px;
+    margin-bottom: 5px;
+    font-size: 16px; 
+}
+
+.total-simbel{
+    background-color: #c9fbc9;
+    border-radius: 5px;
+    padding: 5px;
+}
+
 .payment-cell {
     display: flex;
     align-items: center;
